this fixes color and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html,body,header,
   height: 100%;
   scroll-behavior: smooth;
   font-family: 'Eczar', serif;
-  background-image: url("../images/pizza2.jpg")
+  background-image: url("../img/pizza2.jpg")
   
 }
 body{
